[gd_scene load_steps=3 format=3 uid="uid://bmld3heqtdae5"]

[ext_resource type="Script" path="res://Scripts/StartScreen.gd" id="1_uo8fp"]
[ext_resource type="Texture2D" uid="uid://630ham8ue5mq" path="res://icon.svg" id="2_2502h"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uo8fp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 248.0
offset_right = 639.0
offset_bottom = 341.0

[node name="PanelContainer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter your name"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Envelope" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 236.0
offset_right = 641.0
offset_bottom = 364.0
texture_normal = ExtResource("2_2502h")

[node name="LetterPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 172.0
offset_right = 798.0
offset_bottom = 451.0

[node name="RichTextLabel" type="RichTextLabel" parent="LetterPanel"]
layout_mode = 0
offset_right = 439.0
offset_bottom = 277.0

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Envelope" to="." method="_on_Envelope_pressed"]
